// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PokemonLine /> renders without crashing 1`] = `
<div
  className="PokemonLine__Row-z6g3b0-0 ddBLaM"
>
  <img
    alt="pikachu sprite"
    className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
    src="/sprites/25.png"
  />
  <div>
    <div
      className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
    >
      #25 Pikachu
    </div>
    <ul
      className="InlineList-bwsyp4-0 bKIwJu"
    >
      <li>
        <span
          className="TypeTag-sc-19epxam-0 eoDTXf"
          type="ELECTRIC"
        >
          ELECTRIC
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<PokemonLine /> when a pokemon with incomplete / invalid data is passed renders without crashing 1`] = `
<div
  className="PokemonLine__Row-z6g3b0-0 ldhPJK"
>
  <img
    alt="undefined sprite"
    className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
    src="/sprites/undefined"
  />
  <div>
    <div
      className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
    >
      #undefined 
    </div>
    <ul
      className="InlineList-bwsyp4-0 bKIwJu"
    />
  </div>
</div>
`;

exports[`<PokemonLine /> when a pokemon with more than one type is passed renders all types 1`] = `
<div
  className="PokemonLine__Row-z6g3b0-0 bEnhlC"
>
  <img
    alt="bulbasaur sprite"
    className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
    src="/sprites/1.png"
  />
  <div>
    <div
      className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
    >
      #1 Bulbasaur
    </div>
    <ul
      className="InlineList-bwsyp4-0 bKIwJu"
    >
      <li>
        <span
          className="TypeTag-sc-19epxam-0 dCWWOO"
          type="GRASS"
        >
          GRASS
        </span>
      </li>
      <li>
        <span
          className="TypeTag-sc-19epxam-0 daqRLF"
          type="POISON"
        >
          POISON
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<PokemonLine /> when a pokemon with no type is passed renders without crashing 1`] = `
<div
  className="PokemonLine__Row-z6g3b0-0 ldhPJK"
>
  <img
    alt="pikachu sprite"
    className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
    src="/sprites/25.png"
  />
  <div>
    <div
      className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
    >
      #25 Pikachu
    </div>
    <ul
      className="InlineList-bwsyp4-0 bKIwJu"
    />
  </div>
</div>
`;

exports[`<PokemonLine /> when outdent is passed renders without crashing 1`] = `
<div
  className="PokemonLine__Row-z6g3b0-0 JPTuh"
>
  <img
    alt="pikachu sprite"
    className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
    src="/sprites/25.png"
  />
  <div>
    <div
      className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
    >
      #25 Pikachu
    </div>
    <ul
      className="InlineList-bwsyp4-0 bKIwJu"
    >
      <li>
        <span
          className="TypeTag-sc-19epxam-0 eoDTXf"
          type="ELECTRIC"
        >
          ELECTRIC
        </span>
      </li>
    </ul>
  </div>
</div>
`;
